# CallShield

./: .gitignore  PRD.md  README.md
backend/: .env.example  .gitignore  API_DOCS.md  README.md  enroll_user.py  pyproject.toml  test_deepfake.py  test_enrollment_api.py  test_import.py  test_phase2.py  test_real_mic.py  test_websocket.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: __init__.py  agent.py  enrollment.py  sessions.py  websocket.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  agent_script.py  audio_processor.py  audio_utils.py  deepfake_detector.py  risk_engine.py  session_manager.py  social_engineering.py  tts_service.py  voice_embedding.py
backend/pretrained_models/spkrec-ecapa-voxceleb/: hyperparams.yaml
data/embeddings/: .gitkeep  CGeorge_embedding.npy  CGeorge_metadata.json  a_embedding.npy  a_metadata.json  demo_user_embedding.npy  jcena123_embedding.npy  jcena123_metadata.json  sid_embedding.npy  sid_metadata.json  test_user_api_metadata.json
data/enrollments/: .gitkeep
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentDisplay.tsx  AudioRecorder.tsx  ControlPanel.tsx  Header.tsx  RiskDashboard.tsx  RiskWidget.tsx
frontend/hooks/: useAgentAudio.ts  useAudioCapture.ts  useCallSession.ts  useRiskPolling.ts
frontend/services/: api.ts  websocket.ts
frontend/types/: index.ts
pretrained_models/spkrec-ecapa-voxceleb/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  (+1 more)
(+21 files in other folders)
